--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 resolver = "2"
 members = [
 #    "src/cli",
-#    "src/daemon",
+    "src/daemon",
     "src/lib",
-#    "src/plugin_conman",
+    "src/plugin_cody",
 #    "src/plugin_mozim",
 #    "src/plugin_nmstate",
 ]
@@ -26,8 +26,10 @@ env_logger = "0.9.0"
 log = "0.4.17"
 nix = { version = "0.25.0", default-features = false, features = ["poll"] }
 serde_json = "1.0.87"
+uuid = { version = "1.6.1", default-features = false, features = ["std", "v7"] }
+futures = {version = "0.3.29", default-fatures = false, features = [ "std" ] }
 
 [workspace.dependencies.tokio]
 version ="1.35.0"
 default-fatures = false
-features = ["net", "io-util", "rt-multi-thread"]
+features = ["net", "io-util", "rt-multi-thread", "macros", "sync"]
