--- a/src/daemon/Cargo.toml
+++ b/src/daemon/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "nipart"
+name = "nipartd"
 version.workspace = true
 authors.workspace = true
-description.workspace = true
+description = "The daemon of nipart"
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -15,8 +15,9 @@ log = { workspace = true }
 nix = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
-uuid = { workspace = true }
+nipart = { path = "../lib", version = "0.1" }
+futures = { workspace = true }
 
-[lib]
-name = "nipart"
-path = "lib.rs"
+[[bin]]
+name = "nipartd"
+path = "nipartd.rs"
