--- a/src/plugin_cody/Cargo.toml
+++ b/src/plugin_cody/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "nipart"
+name = "nipart-plugin-cody"
 version.workspace = true
 authors.workspace = true
-description.workspace = true
+description = "The cody plugin for nipart"
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -15,8 +15,8 @@ log = { workspace = true }
 nix = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
-uuid = { workspace = true }
+nipart = { path = "../lib", version = "0.1" }
 
-[lib]
-name = "nipart"
-path = "lib.rs"
+[[bin]]
+name = "nipart_plugin_cody"
+path = "cody.rs"
