--- a/src/cli/Cargo.toml
+++ b/src/cli/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "nipartd"
+name = "nipart-cli"
 version.workspace = true
 authors.workspace = true
-description = "The daemon of nipart"
+description = "The command line client for nipart"
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -12,11 +12,11 @@ rust-version.workspace = true
 serde = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
-serde_json = { workspace = true }
+serde_yaml = { workspace = true }
 tokio = { workspace = true }
 nipart = { path = "../lib", version = "0.1" }
-futures = { workspace = true }
+clap = { workspace = true }
 
 [[bin]]
-name = "nipartd"
-path = "nipartd.rs"
+name = "nipc"
+path = "nipc.rs"
