The plugin should start with the daemon's log level
Signed-off-by: Gris Ge <fge@redhat.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
     "src/daemon",
     "src/lib",
     "src/plugin_nispor",
-#    "src/plugin_nmstate",
+    "src/plugin_baize",
 ]
 
 [workspace.package]
