--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde_yaml = "0.9.27"
 uuid = { version = "1.6.1", default-features = false, features = ["std", "v7"] }
 futures = {version = "0.3.29", default-fatures = false, features = [ "std" ] }
 clap = { version = "4.4" }
+nispor = { version = "1.2", git = "https://github.com/nispor/nispor" }
 
 [workspace.dependencies.tokio]
 version ="1.35.0"
