--- a/src/plugin_nispor/Cargo.toml
+++ b/src/plugin_nispor/Cargo.toml
@@ -13,8 +13,9 @@ serde = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true }
+nispor = { workspace = true }
 nipart = { path = "../lib", version = "0.1" }
 
 [[bin]]
 name = "nipart_plugin_nispor"
-path = "nispor.rs"
+path = "plugin_nispor.rs"
