--- a/src/lib/Cargo.toml
+++ b/src/lib/Cargo.toml
@@ -9,10 +9,11 @@ license.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-serde = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true }
+serde_yaml = { workspace = true }
 tokio = { workspace = true }
 uuid = { workspace = true }
 
