--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,8 @@ nispor = { version = "1.2", git = "https://github.com/nispor/nispor" }
 version ="1.35.0"
 default-fatures = false
 features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"]
+
+[workspace.dependencies.nix]
+version = "0.26.2"
+default-features = false
+features = ["feature", "hostname"]
