--- a/src/plugin_nispor/Cargo.toml
+++ b/src/plugin_nispor/Cargo.toml
@@ -14,6 +14,7 @@ env_logger = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true }
 nispor = { workspace = true }
+nix = { workspace = true }
 nipart = { path = "../lib", version = "0.1" }
 
 [[bin]]
