Introduce Event, Task, Workflow and retry
Please refer to `docs/architecture_decisions/ADR-002-task_processing.md`
for task processing design detail.

Please refer to `docs/architecture_decisions/ADR-004-retry.md` for retry
design detail.

This patch has done the `nipc apply` support for with features:
 * Verify applied state
 * Retry on verification error

Signed-off-by: Gris Ge <fge@redhat.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,11 @@ version ="1.35.0"
 default-fatures = false
 features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"]
 
+[workspace.dependencies.tokio-util]
+version ="0.7.0"
+default-fatures = false
+features = ["time"]
+
 [workspace.dependencies.nix]
 version = "0.26.2"
 default-features = false
