--- a/src/daemon/Cargo.toml
+++ b/src/daemon/Cargo.toml
@@ -14,8 +14,10 @@ env_logger = { workspace = true }
 log = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
+tokio-util = { workspace = true }
 nipart = { path = "../lib", version = "0.1" }
 futures = { workspace = true }
+uuid = { workspace = true }
 
 [[bin]]
 name = "nipartd"
