Introduce native plugin
Please refer to `ADR-005-native_plugin.md` for detail design

Signed-off-by: Gris Ge <fge@redhat.com>

--- a/src/plugin_nispor/Cargo.toml
+++ b/src/plugin_nispor/Cargo.toml
@@ -17,6 +17,5 @@ nispor = { workspace = true }
 nix = { workspace = true }
 nipart = { path = "../lib", version = "0.1" }
 
-[[bin]]
-name = "nipart_plugin_nispor"
-path = "plugin_nispor.rs"
+[lib]
+path = "lib.rs"
