--- a/src/daemon/Cargo.toml
+++ b/src/daemon/Cargo.toml
@@ -18,6 +18,7 @@ tokio-util = { workspace = true }
 nipart = { path = "../lib", version = "0.1" }
 futures = { workspace = true }
 uuid = { workspace = true }
+nipart-plugin-nispor = { path = "../plugin_nispor", version = "0.1" }
 
 [[bin]]
 name = "nipartd"
