--- a/src/plugin_mozim/Cargo.toml
+++ b/src/plugin_mozim/Cargo.toml
@@ -13,7 +13,9 @@ serde = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true }
+mozim = { workspace = true }
 nipart = { path = "../lib", version = "0.1" }
+futures = { workspace = true }
 
 [lib]
 path = "lib.rs"
