--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "src/plugin_baize",
     "src/plugin_mozim",
     "src/plugin_nispor",
+    "src/plugin_demo",
 ]
 
 [workspace.package]
