--- a/src/daemon/Cargo.toml
+++ b/src/daemon/Cargo.toml
@@ -20,6 +20,7 @@ futures = { workspace = true }
 uuid = { workspace = true }
 nipart-plugin-nispor = { path = "../plugin_nispor", version = "0.1" }
 nipart-plugin-mozim = { path = "../plugin_mozim", version = "0.1" }
+nipart-plugin-baize = { path = "../plugin_baize", version = "0.1" }
 
 [[bin]]
 name = "nipartd"
