--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,8 @@ serde_yaml = "0.9.27"
 uuid = { version = "1.6.1", default-features = false, features = ["std", "v7"] }
 futures = {version = "0.3.29", features = [ "std" ] }
 clap = { version = "4.4" }
-#nispor = { version = "1.2", git = "https://github.com/nispor/nispor" }
-nispor = { version = "1.2", path = "../nispor/src/lib" }
+nispor = { version = "1.2", git = "https://github.com/nispor/nispor" }
+#nispor = { version = "1.2", path = "../nispor/src/lib" }
 
 [workspace.dependencies.tokio]
 version ="1.35.0"
