Introduce locker plugin -- smith
Introduce `NipartPluginEvent::Lock`, `NipartPluginEvent::Unlock` and
`NipartPluginEvent::LockReply` allowing commander to request lock before
applying the desired state.

Signed-off-by: Gris Ge <fge@redhat.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,11 @@ members = [
     "src/daemon",
     "src/lib",
     "src/plugin_baize",
+    "src/plugin_demo",
     "src/plugin_mozim",
     "src/plugin_nispor",
     "src/plugin_sima",
-    "src/plugin_demo",
+    "src/plugin_smith",
 ]
 
 [workspace.package]
