Rewrite commit tracking API and plugin (sima)
Upon `apply` action, a NetworkCommit will be created and send to plugin
with role `NipartRole::Commit`.

The NetworkCommit holds:
 * `id`: NipartUuid (internal is u128)
 * `time`: time in UTC timezone.
 * `desired_state`: User defined state

Instead of using git as storage backend in sima plugin, we use:

 * /var/lib/nipart/commits  # holding all commits
 * /var/lib/nipart/post_apply_state.yml # full running state after last commit
 * /etc/nipart/states/applied.yml   # merged conf from all commits

For CLI user:

 * `nipc show`: Current running full network state
 * `nipc show --diff`: Get changed state since last commit
 * `nipc show --saved`: Get stored network state merged from all commits
 * `nipc apply --diff`: Apply changed state since last commit
 * `nipc commit show`: Show all network commits
 * `nipc commit show <id>`: Show specified commit
 * `nipc commit revert <id>`: Add new commit to revert changes of
                              specified commit.
 * `nipc commit remove <id>..`: Remove specified commits.
 * `nipc commit rollback <id>`: Rollback to specified commit, all commit
                                after it will be reverted and removed.

Signed-off-by: Gris Ge <fge@redhat.com>

--- a/src/cli/Cargo.toml
+++ b/src/cli/Cargo.toml
@@ -16,6 +16,7 @@ serde_yaml = { workspace = true }
 tokio = { workspace = true }
 nipart = { path = "../lib", version = "0.1" }
 clap = { workspace = true }
+chrono = { workspace = true }
 
 [[bin]]
 name = "nipc"
