--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,9 @@ serde_json = "1.0.87"
 serde_yaml = "0.9.27"
 uuid = { version = "1.6.1", default-features = false, features = ["std", "v7"] }
 futures = {version = "0.3.29", features = [ "std" ] }
-clap = { version = "4.4" }
-nispor = { version = "1.2", git = "https://github.com/nispor/nispor" }
-#nispor = { version = "1.2", path = "../nispor/src/lib" }
+clap = { version = "4.5" }
+nispor = { version = "1.2" }
+chrono = { version = "0.4" , features = ["serde"]}
 
 [workspace.dependencies.tokio]
 version ="1.35.0"
@@ -68,6 +68,3 @@ version = "0.19.0"
 
 [workspace.dependencies.futures_channel]
 version = "0.3.30"
-
-[workspace.dependencies.gix]
-version = "0.63.0"
