--- a/src/lib/Cargo.toml
+++ b/src/lib/Cargo.toml
@@ -11,11 +11,13 @@ rust-version.workspace = true
 [dependencies]
 env_logger = { workspace = true }
 log = { workspace = true }
+rand = "0.8.5"
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 tokio = { workspace = true }
 uuid = { workspace = true }
+chrono = { workspace = true }
 
 [lib]
 name = "nipart"
